fixed overflow issue on login/signup pages

--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -8,6 +8,7 @@
     bottom: 0;   
     min-width: 100%;   
     min-height: 100%; 
+    overflow: auto;
 }
 
 .img-col {
